storage/myisam/mi_open.c
@@ -376,6 +376,8 @@ MI_INFO *mi_open(const char *name, int mode, uint open_flags)
           {
             uint real_length= pos->flag & HA_BLOB_PART ? pos->bit_start
                                                        : pos->length;
+            if (pos->type == HA_KEYTYPE_BIT && pos->bit_length)
+              real_length--;
             set_if_bigger(share->vreclength, pos->start + real_length);
           }
 	}
